# ARBI2

./: .gitignore  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-backend-mvp/: 01-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/database/: __init__.py  base.py  models.py  session.py
backend/app/services/: base.py
backend/app/shared/: __init__.py  errors.py  pagination.py
