[project]
name = "arbi-backend"
version = "0.1.0"
description = "Arbi Platform — Python backend (FastAPI)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite>=0.19",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
